Fixed double border footer issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,6 @@ body {
 /* Section */
 section {
   min-height: 100vh;
-  /*min-height: 600px;*/
 }
 
 /**
@@ -248,6 +247,10 @@ p {
   line-height: normal;
 }
 
+hr {
+  border: none;
+}
+
 .hr {
   background-color: transparent;
   height: 93px;
@@ -304,7 +307,7 @@ antihighlight {
 footer {
   width: 100vw;
   text-align: center;
-  height: 50px;
+  padding-bottom: 20px;
   font-family: 'Open Sans', sans-serif;
   color: #7d7d7d;
 }
